me bad at words

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
               <h1>Nav without JS</h1>
 
               <p>
-                This page is an illustration of a hack I came up a while ago, to provide familiar
-                single-page navigation behavior (you know, click a link and the visible
+                This page is an illustration of a hack I came up with a while ago, to provide
+                familiar single-page navigation behavior (you know, click a link and the visible
                 section changes) without JavaScript enabled.
               </p>
               <p>
@@ -108,7 +108,7 @@ input[type="radio"]:checked + section { display: block; }</pre>
               <p>
                 If you want to understand this better, you can always
                 <a href="https://github.com/dtao/withoutjs">read the code</a> (or
-                <a href="https://github.com/dtao/withoutjs/issues">ask me question</a>)!
+                <a href="https://github.com/dtao/withoutjs/issues">ask me a question</a>)!
               </p>
             </section>
 
